# Advanced-DL-CV

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: gen-src-readme.md  gen-week-report.md  run.md
.github/: copilot-instructions.md
.github/agents/: Teach.agent.md
.github/skills/gen-src-readme/: SKILL.md
.github/skills/gen-week-report/: SKILL.md
.github/skills/test/: SKILL.md
Exercise1.1/src/: transformer.py
Exercise2.1/configs/: exercise2.1.yaml
Exercise2.1/src/: README.md  ddpm.py  ddpm_train.py  playground.py
Exercise2.1/src/dataset/: sprites_dataset.py
Exercise2.1/week_report/: README.md  exercise2.1.tex
Exercise2.2/src/: README.md  classifier_eval.py  classifier_train.py  ddpm_train.py  model.py  sample_cg.py
Exercise2.2/src/dataset/: sprites_dataset.py
Exercise2.3/configs/: ddim_baseline.yaml  ddim_guidance_10_0.yaml  ddim_guidance_2_0.yaml  ddim_guidance_3_5.yaml  ddim_guidance_7_5.yaml  ddim_start_step_05.yaml  ddim_start_step_15.yaml  ddim_start_step_35.yaml  ddim_start_step_45.yaml  ddim_steps_200.yaml  ddim_steps_25.yaml  ddim_steps_50.yaml
Exercise2.3/src/: README.md  cross_attention_editing.py  ddim_inversion.py  ddim_inversion_simple_editing.py  ddim_sampling.py  evaluate_reconstruction.py  image_to_image_simple_editing.py  null_text_inversion.py  pipeline_setup.py  vis_cross_attn.py
Exercise2.3/src/bash_scripts/: evaluate_rec.sh  img2img_edit.sh
Exercise2.3/week_report/: 3_nlp.tex
(+3 files in other folders)
